src/test/deca/context/invalid/readint__assign_bool.deca
// Description:
//    Programme minimaliste utilisant read pour l'induire a une erreur.
//
// Resultats:
//    Erreur contextuelle 
//    Ligne 13 : They are not compatible (not same type or float->int) int is not boolean
//
// Historique:
//    cree le 06/01/2025

{   
   boolean x;
   x=readInt();

}